some corrections according to feedback

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -16,7 +16,7 @@ Na druhé straně tu však byl \textbf{běžný obyvatel}, který nepatřil k pr
 
 Mocenské soupeření států ústí ve zběsilý a nikdy nekončící \textbf{závod ve vývoji účinnějších zbraní a metod jejich použití}. V jednom okamžiku dominuje Blízkému východu vozataj, v následujícím jej poráží Makedonská falanga, nad ní předvede svou superioritu Římský systém manipulů, ten vzápětí Římané sami prohlašují za zastaralý, avšak o půl tisíciletí později stejně jejich říši rozvrací hordy Hunských jezdců... chladná zbraň, ať už v rukou jezdce či pěšího vojáka, zůstává po většinu dějin dominantním prvkem na bojišti, se střelnými zbraněmi hrajícími významnou podpůrnou roli. Až s rozmachem zbraní palných se tato dynamika obrací a velmi pozvolně se dobíráme k modernímu vojenství. V současné době se chladná zbraň považuje převážně za překonanou - uplatnění pro ní stále existuje např. v kontextu pořádkových složek, avšak i pro ty plní úlohu spíše doplňkovou. Mimo oficiální kruhy pořád hraje nezanedbatelnou roli, avšak to je především pro její \textbf{triviální dostupnost} v porovnání s palnou zbraní.
 
-Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění \textbf{Kendó} ("cesta meče") vycházející ze samurajské tradice, či evropská komunita \textbf{historického šermu}, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní \textbf{sportovní šerm}, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén \textbf{LARP}\footnote{\ac{LARP}}, jehož jedna z podob - tzv. "dřevárna" - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
+Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění \textbf{Kendó} ("cesta meče") vycházející ze samurajské tradice, či evropská komunita \textbf{historického šermu}, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní \textbf{sportovní šerm}, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén \textbf{LARP}\footnote{\ac{LARP}}, jehož jedna z podob - tzv. "dřevárna" - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
 
 Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní jejich oblíbenou činnost napodobit, ale bez mnohých nepohodlí, jež ji provázejí v reálném světě. Pro hráče, který s bojem v reálném světě žádnou zkušenost nemá, může zase videohra být cestou, jak tuto mezeru ve svých zkušenostech částečně zaplnit a získat například hlubší porozumění k historii.
 
@@ -49,9 +49,9 @@ Zde si pouze nastíníme pár základních faktorů, které při souboji hrají 
 
 \textbf{Dosah, pohyb, terén} - V okamžiku, kdy vám protivník není schopen ublížit a vy jemu ano, můžete si dovolit být libovolně agresivní\footnote{Díky tomu dlouhé zbraně jako kopí mohou být velmi účinné i v rukou nezkušeného odvedence.}. Je-li váš protivník v takovéto výhodě, jedinou možností je se k němu přiblížit - pak se dostanete do výhody vy, jelikož zbraně s dlouhým dosahem zpravidla trpí na nízkou obratnost při boji zblízka\footnote{Nedejte protivníkovi čas tasit poboční zbraň.}. Vaše možnosti, jak se k němu přiblížit, přirozeně velmi závisí na terénu\footnote{Když stojíte pod hradbami a protivník bodá kopím z ochozu nad vámi, jste v pěkné kaši.}. 
 
-Máte-li oba stejný dosah, pohyb se však nestává o nic méně důležitým. Správná technika pohybu pomáhá šermíři držet pod kontrolou jeho těžiště a nenechat se rozhodit, když klopýtne, či na něj protivník agresivně naběhne; případně mu umožní bleskově se přiblížit a využít nechráněnou oblast, kterou mu protivník nabídl svým nemotorným pohybem. 
+Máte-li jeden druhého v dosahu, pohyb se však nestává o nic méně důležitým. Správná technika pohybu pomáhá šermíři držet pod kontrolou jeho těžiště a nenechat se rozhodit, když klopýtne, či na něj protivník agresivně naběhne; případně mu umožní bleskově se přiblížit a využít nechráněnou oblast, kterou mu protivník nabídl svým nemotorným pohybem. 
 
-\textbf{Zbroj}, kterou má protivník na sobě, může citelně omezit vaše možnosti co do způsobů, jak mu uštědřit zranění. Je-li například v plné plátové zbroji pozdního středověku, pokoušet se do ní sekat mečem je prakticky zbytečné. Vaše možnosti se citelně zúží - buď se můžete pokusit bodnout do některé ze skulin ve zbroji, nebo meč vyměnit za palcát či válečné kladivo\footnote{Případně lze meč chytit za čepel a záštitou zasuplovat hlavici kladiva - viz \cite{FightingWithTheGermanLongsword}} a protivníkovi tupými údery zlámat kosti. Protivník si vaší situace bude vědom, a o to jednodušší pro něj bude předvídat vaše akce.
+\textbf{Zbroj}, kterou má protivník na sobě, může citelně omezit vaše možnosti co do způsobů, jak mu uštědřit zranění. Je-li například v plné plátové zbroji pozdního středověku, pokoušet se do ní sekat mečem je prakticky zbytečné. Vaše možnosti se citelně zúží - buď se můžete pokusit bodnout do některé ze skulin ve zbroji, nebo meč vyměnit za palcát či válečné kladivo\footnote{Případně lze meč chytit za čepel a záštitou zasuplovat hlavici kladiva - viz \cite{FightingWithTheGermanLongsword}} a protivníkovi tupými údery pochroumat vnitřnosti a zlámat kosti. Protivník si vaší situace bude vědom, a o to jednodušší pro něj bude předvídat vaše akce.
 
 Znakem každého dobrého šermíře je schopnost vcítit se do pozice svého protivníka a \textbf{odhadovat jeho budoucí akce} dříve, než se stanou. Nezkušený šermíř bude každý svůj úder provázet výrazným nápřahem, pro jeho protivníka pak není obtížné úder vyblokovat a přitom se rovnou k protivníkovi přiblížit a seknout po místě, které ví, že při úderu protivník nechal nechráněné. Zkušený šermíř pak ani nepotřebuje vidět výrazný nápřah, naučí se protivníkovu akci podvědomě vycítit z drobných náznaků (pohybů svalů, očí,...). Samozřejmě je možné předvádět údery fingovaně a čekat, že se při protiútoku otevře protivník vám. Pak záleží na jeho úsudku, zda úmysl prokoukne a provede fingovaný protiútok - stupňům falše se meze nekladou. 
 
@@ -60,7 +60,7 @@ Znakem každého dobrého šermíře je schopnost vcítit se do pozice svého pr
     \center
     \includegraphics[width=140mm]{../img/Meyer_1570_Sword_B.png}
     \includegraphics[width=140mm]{../img/Meyer_1570_Sword_C.png}
-    \caption{techniky pro jedenapůlruční meč - Joachim Meyer (1570) \cite{KunstDesFechtens}}
+    \caption{Průběh souboje: techniky pro jedenapůlruční meč - Joachim Meyer (1570) \cite{KunstDesFechtens}}
     \label{obr01:KunstDesFechtens}
     
 \end{figure}
@@ -74,7 +74,7 @@ Jedním ze základních požadavků, které jsou na vojáka kladeny, je schopnos
 
 Při skupinové šarvátce hraje zpravidla rozhodující roli taktická \textbf{koordinace} spolubojovníků. Nepřítel, který vám překvapivě vpadl do zad, je mnohem nepříjemnější záležitost, než nepřítel, který postává opodál a čeká, až na něj přijde řada.  
 
-Pro dosažení koordinace je však nutná \textbf{komunikace}. Dohodnout se při šarvátce na postupu, v omezeném čase a aniž by plán byl zachycen protivníkem, vskutku není triviální problém. V kontextu větší bitvy pak důležitost i obtížnost komunikace nabývá zcela nového rozměru a jde o těžký problém, který až do vynálezu moderní vysílačky nebyl uspokojivě vyřešen. Vojenská taktika si vyžaduje flexibilní reakce na změny situace na bojišti, informace musí proudit mezi vojenskými jednotkami a velitelstvím, které jsou často netriviálně fyzicky vzdálené. Jednou možností, jak informaci předat, je vyslání posla - ten je schopen nést detailní informaci, je však zranitelný a pomalý - než dorazí, může již jeho informace být neaktuální. Protipólem pak je broadcast předem dohodnutých signálů, napříkald prostřednictvím trubače - tato cesta je rychlá a v určitém doslechovém okruhu vcelku spolehlivá, avšak signály musí být předem dohodnuté a variant nemůže být mnoho, metoda tedy postrádá flexibilitu a detailnost informace. Jak vidno, jde o zásadní součást vedení bitvy, přesto však vidíme mnoho videoher, které ji zcela zanedbávají.
+Pro dosažení koordinace je však nutná \textbf{komunikace}. Dohodnout se při šarvátce na postupu, v omezeném čase a aniž by plán byl zachycen protivníkem, vskutku není triviální problém. V kontextu větší bitvy pak důležitost i obtížnost komunikace nabývá zcela nového rozměru a jde o těžký problém, který až do vynálezu moderní vysílačky nebyl uspokojivě vyřešen. Vojenská taktika si vyžaduje flexibilní reakce na změny situace na bojišti, informace musí proudit mezi vojenskými jednotkami a velitelstvím, které jsou často netriviálně fyzicky vzdálené. Jednou možností, jak informaci předat, je vyslání posla - ten je schopen nést detailní informaci, je však zranitelný a pomalý - než dorazí, může již jeho informace být neaktuální. Protipólem pak je broadcast předem dohodnutých signálů, napříkald prostřednictvím trubače - tato cesta je rychlá a v určitém doslechovém okruhu vcelku spolehlivá, avšak signály musí být předem dohodnuté a variant nemůže být mnoho, metoda tedy postrádá flexibilitu a detailnost informace. Jak vidno, jde o zásadní součást vedení bitvy, přesto však vidíme mnoho videoher (např. \cite{Medieval2TotalWar} \cite{Warcraft3}), které ji zcela zanedbávají.
 \bigbreak
 Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uvedené stále platí, akorát očividně kolosální výhody plynoucí z koordinovaného postupu jsou dopřány pouze jedné ze stran. I pro velmi zkušeného šermíře bojujícího proti několika nezkušeným, často jediná šance, jak z takové situace vyváznout, je protivníky rozdělit (kreativním použitím pohybu a znalosti terénu) a zdolat jednoho po druhém rychle, než mu ostatní přijdou na pomoc.
 
@@ -98,7 +98,7 @@ Nyní, když máme rámcovou představu, jak boj s chladnou zbraní vypadá v re
 Účinkujícími ve hře jsou \textbf{herní postavy}. Ty mohou být ovládané buď hráčem (takovou postavu nazveme \textbf{\acs{PC}}\footnote{\Acl{PC}}), nebo počítačovým algoritmem (tu označíme jako \textbf{\acs{NPC}}\footnote{\Acl{NPC}}), a lze je popsat nějakým jejich \textbf{vnitřním stavem}. Nyní si představíme základní veličiny, které jsou typickou součástí vnitřního stavu postavy ve všech akčních hrách bez ohledu na to, zda jde o hru zaměřenou na boj se střelnou zbraní, chladnou zbraní, či boj jakýkoliv jiný:
 
 \begin{itemize}
-    \item \textbf{\ac{HP}}... Číslo udávající zdravotní stav a životaschopnost postavy. \textbf{Pokud klesne na nulu, postava umírá.} K jeho snížení může dojít například úderem protivníkovy zbraně či pádem z výšky a takto odebraným bodům HP říkáme \textbf{\acs{dmg}}\footnote{\Acl{dmg}}. Hráči je stav jeho HP obvykle v reálném čase explicitně komunikován skrze ukazatel na obrazovce. V průběhu boje typicky nejsou doplňovány\footnote{Popřípadě prostředky, skrze které je lze doplnit, jsou vzácné.} a postava musí vystačit s tím, co má - jde tedy o zdroj vybízející k dlouhodobějšímu hospodaření.
+    \item \textbf{\ac{HP}}... \linebreak Číslo udávající zdravotní stav a životaschopnost postavy. \textbf{Pokud klesne na nulu, postava umírá.} K jeho snížení může dojít například úderem protivníkovy zbraně či pádem z výšky a takto odebraným bodům HP říkáme \textbf{\acs{dmg}}\footnote{\Acl{dmg}}. Hráči je stav jeho HP obvykle v reálném čase explicitně komunikován skrze ukazatel na obrazovce. V průběhu boje typicky nejsou doplňovány\footnote{Popřípadě prostředky, skrze které je lze doplnit, jsou vzácné.} a postava musí vystačit s tím, co má - jde tedy o zdroj vybízející k dlouhodobějšímu hospodaření.
     \item \textbf{Výdrž}... Volitelný avšak častý prvek, číslo reprezentující akutní schopnost postavy vynakládat fyzické úsilí. Spotřebováváno chvatným pohybem a prováděním akcí, v průběhu boje zpravidla dochází k jeho rychlému opakovanému spotřebování a regeneraci.
     \item \textbf{Inventář}... List dalších předmětů, které postava nese s sebou. Může jít o peníze, léčivé lektvary, munici, náhradní zbraně, magické svitky, mapy a cokoliv dalšího v závislosti na hře. 
 \end{itemize}
@@ -238,7 +238,7 @@ Jde o jedinou hru, kterou si zde představíme, jež se nevydala cestou omezení
 
 \textbf{Backend hry} umožňoval \textbf{plně volný pohyb} všech objektů třímaných herní postavou (postava mohla např. v jedné ruce držet meč a ve druhé štít či druhý meč), přičemž tělo postavy bylo \textbf{procedurálně animováno} (další na tuto dobu vzácný úkaz), aby poloha jejích rukou s polohou objektů korespondovala.
 
-Tento přístup k implementaci přinesl některé \textbf{zajímavé důsledky}. Hra nepotřebovala implementovat dedikovanou mechaniku pro blokování nepřátelských úderů, stačilo meč napolohovat tak, aby tomu nepřátelskému stál v cestě. Podobným způsobem zde byl nepřeberný prostor pro další zajímavé techniky, vyvíjené a zdokonalované plně hráčskou komunitou. Dále, díky obecnosti systému nebyl problém mít nepřátele všech představitelných tvarů a velikostí - dokud měl nepřítel hmotné tělo, mohli jste ho mečem trefit; dokud měl nějakou končetinu, mohl sám držet zbraň. Spojením se systémem procedurální animace nestvůrám bylo možné velmi efektně odsekávat kusy těla a kochat se jejich zvýšenou nemotorností\footnote{případně rovnou neschopností hráče zranit, pokud byla odseknuta končetina třímající zbraň}. K dovršení dojmu vás hra nechala chopit se odseknuté končetiny jako zbraně, stále při stejném ovládání, jaké vám nabídl meč.
+Tento přístup k implementaci přinesl některé \textbf{zajímavé důsledky}. Hra nepotřebovala implementovat dedikovanou mechaniku pro blokování nepřátelských úderů, stačilo meč napolohovat tak, aby tomu nepřátelskému stál v cestě. Podobným způsobem zde byl nepřeberný prostor pro další zajímavé techniky, vyvíjené a zdokonalované plně hráčskou komunitou. Dále, díky obecnosti systému nebyl problém mít nepřátele všech představitelných tvarů a velikostí - dokud měl nepřítel hmotné tělo, mohli jste ho mečem trefit; dokud měl vhodnou končetinu, mohl sám držet zbraň. Spojením se systémem procedurální animace nestvůrám bylo možné velmi efektně odsekávat kusy těla a kochat se jejich zvýšenou nemotorností\footnote{případně rovnou neschopností hráče zranit, pokud byla odseknuta končetina třímající zbraň}. K dovršení dojmu vás hra nechala chopit se odseknuté končetiny jako zbraně, stále při stejném ovládání, jaké vám nabídl meč.
 
 Kamenem úrazu pro hru však nesporně bylo \textbf{ovládání}. Tvůrci hry si byli zřejmě vědomi, o jak náročnou výzvu vyžadující dlouhodobý výzkum v případě této hry jde, a nabídli hned několik velmi odlišných metod vstupu pro udání pohybu zbraně:
 \begin{itemize}
