--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -103,6 +103,18 @@
   url = {https://github.com/id-Software/DOOM},
   date = {1993-12-10},
 }
+@software{Medieval2TotalWar,
+  author = {{Creative Assembly}},
+  title = {Medieval 2: Total War},
+  url = {https://store.steampowered.com/app/4700/Total_War_MEDIEVAL_II__Definitive_Edition/},
+  date = {2006-11-10},
+}
+@software{Warcraft3,
+  author = {{Blizzard Entertainment}},
+  title = {Warcraft III: Reign of Chaos},
+  url = {https://playwarcraft3.com/en-us/},
+  date = {2003-07-01},
+}
 @software{HalfLife,
   author = {{Valve Corporation}},
   title = {Half-Life},
