--- a/cs/uvod.tex
+++ b/cs/uvod.tex
@@ -15,4 +15,4 @@ Cílem této práce je implementovat kostru jednoduché akční hry z pohledu pr
 
 \section*{Struktura práce}
 
-V kapitole 1 si blíže vysvětlíme pojmy, se kterými budeme pracovat, uvedeme se do problematiky boje s chladnými zbraněmi ve videohrách, nastíníme příklad typického stavu a několik příkladů, ze kterých chceme čerpat inspiraci. V krátké kapitole 2 se zamyslíme a stanovíme cíl naší práce. Kapitolu 3 věnujeme stručnému úvodu do použitého herního enginu Unity a podrobnějšímu představení jeho fyzikálního subsystému, na němž tato práce do značné míry stojí. Dále budeme pokračovat kapitolou 4, ve které provedeme návrh systému, především se zaměříme na schéma ovládání pro náš jedenapůlruční meč. V kapitole 5 rozebereme implementaci hry a meče, dopodrobna vylíčíme výzvy, které bylo třeba překonat, a řešení která jsme zvolili. Nakonec v kapitole 6 celkově zhodnotíme návrh našeho systému, rozebereme jeho silné a slabé stránky ve srovnání s existujícími hrami a zamyslíme se nad možnými směry pro navazující práce.
+V kapitole 1 si blíže vysvětlíme pojmy, se kterými budeme pracovat, uvedeme se do problematiky boje s chladnými zbraněmi ve videohrách, nastíníme typický stav a několik příkladů, ze kterých chceme čerpat inspiraci. V krátké kapitole 2 se zamyslíme a stanovíme cíl naší práce. Kapitolu 3 věnujeme stručnému úvodu do použitého herního enginu Unity a podrobnějšímu představení jeho fyzikálního subsystému, na němž tato práce do značné míry stojí. Dále budeme pokračovat kapitolou 4, ve které provedeme návrh systému, především se zaměříme na schéma ovládání pro náš jedenapůlruční meč. V kapitole 5 rozebereme implementaci hry a meče, dopodrobna vylíčíme výzvy, které bylo třeba překonat, a řešení která jsme zvolili. Nakonec v kapitole 6 celkově zhodnotíme návrh našeho systému, rozebereme jeho silné a slabé stránky ve srovnání s existujícími hrami a zamyslíme se nad možnými směry pro navazující práce.
